Fix stretching of full-res album art in app
I noticed popping when the full-res image loads, it was being stretched
to more than the intended height ... maybe because I added the doctype
because previously the page was triggering quirks mode (I had not heard
that term in a long time), so it was accidentally using wrong logic?

Using aspect-ratio for this instead of height seems to fix it in both
Chromium and Firefox.

--- a/app/style.css
+++ b/app/style.css
@@ -464,7 +464,7 @@ img.thumb
   position: absolute;
   width: 100%;
   /* Stretch covers to be square, if need be. */
-  height: 100%;
+  aspect-ratio: 1/1;
   top: 0;
   left: 0;
   border-radius: 0.15rem;
